# Static-Code-Profiler

./: .gitattributes  .pre-commit-config.yaml  Dockerfile  README.md  README_zh.md  pyproject.toml  requirements.txt  run_cli.py
cyclocalc/: __init__.py  __main__.py  cli.py
cyclocalc/analyzer/: metrics.py
cyclocalc/report/: report_generator.py  visualizer.py
output/: report.html  result.json
tests/: test_cli.py
tests/unit/: test_get_python_files.py  test_list_functions.py
