[project]
name = "cyclocalc"
version = "0.2.1"
description = "A program that analyzes source code ASTs to measure cyclomatic complexity and generate security metrics highlighting areas susceptible to vulnerabilities."
authors = [{name = "Przemysław Włodarczyk", email = "przemyslaw.wlodarczyk@intmail.pl"}]
readme = "README.md"
license = "GPL-2.0-only"
homepage = "https://github.com/pewiok/cyclocalc"
repository = "https://github.com/pewiok/cyclocalc"
documentation = "https://github.com/pewiok/cyclocalc#readme"
keywords = ["cli", "tool", "cyclomatic", "complexity", "security", "metrics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security"
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "click (>=8.2.1,<9.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]

[tool.poetry.scripts]
cyclocalc = "cyclocalc.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"
poetry-plugin-export = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
